crates/php-parser/tests/snapshots/malformed_php__abstract_method_in_enum.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
enum methods cannot be abstract
