crates/php-parser/tests/snapshots/malformed_php__abstract_property_no_visibility.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
properties cannot be abstract
