crates/php-parser/tests/snapshots/malformed_php__catch_missing_exception.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected '(', found '{'
expected identifier, found '{'
expected ')', found '{'
