crates/php-parser/tests/snapshots/malformed_php__class_invalid_extends.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected identifier, found '{'
