crates/php-parser/tests/snapshots/malformed_php__class_missing_name_then_valid_function.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected class name, found '{'
