crates/php-parser/tests/snapshots/malformed_php__const_without_value.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected '=', found ';'
expected expression
