crates/php-parser/tests/snapshots/malformed_php__declare_incomplete_paren.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected ')', found end of file
expected statement
