crates/php-parser/tests/snapshots/malformed_php__declare_missing_equals.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected '=', found integer
