crates/php-parser/tests/snapshots/malformed_php__deeply_nested_arrays_hit_depth_limit.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
maximum expression nesting depth exceeded
expected ']', found '['
expected ';' after expression
expected expression
