crates/php-parser/tests/snapshots/malformed_php__for_loop_error_then_valid_while.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected expression
unclosed '')'' opened at Span { start: 10, end: 11 }
expected expression
expected expression
