crates/php-parser/tests/snapshots/malformed_php__function_missing_name_then_valid_class.snap
---
source: crates/php-parser/tests/malformed_php.rs
expression: msgs
---
expected ';' after expression
